# excel-grapher

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.cursor/rules/: brainstorm.mdc  commit.mdc  general.mdc  parity.mdc
.github/workflows/: ci.yml
docs/: how_it_works.qmd
example/: compare_lic_graph_compression.py  diagnose_constraint_candidates.py  extract_graph_cached.py  extract_graph_uncached.py  lic_dsf_labels.py  lightweight_viz_template.html  map_lic_dsf_indicators.py  profile_create_dependency_graph.py  profile_identity_compress_synthetic.py  profile_lightweight_viz.py  regenerate_sample_viz.py  report_chart_shock_sensitivity.py
excel_grapher/: __init__.py
excel_grapher/core/: __init__.py  addressing.py  cell_types.py  coercions.py  excel_function_meta.py  expr_eval.py  formula_ast.py  operators.py  types.py
excel_grapher/evaluator/: __init__.py  codegen.py  errors.py  evaluator.py  helpers.py  name_utils.py  parser.py  types.py
excel_grapher/exporter/: __init__.py
excel_grapher/grapher/: __init__.py  blank_ranges.py  builder.py  cache.py  compression.py  dependency_provenance.py  dynamic_refs.py  export.py  graph.py  guard.py  lightweight_viz.py  lightweight_viz_template.html  node.py  parser.py  provenance_collect.py  resolver.py  type_analysis_cache.py  validation.py
scripts/: map_lic_dsf_indicators.py
src/excel_grapher/: __init__.py  builder.py  export.py  extractor.py  graph.py  guard.py  node.py  parser.py  resolver.py  validation.py
tests/: __init__.py  test_dependency_graph_build.py  test_dynamic_refs.py  test_export_graphviz.py  test_export_networkx.py  test_extractor.py  test_guarded_edges_cycle_detection.py  test_guarded_edges_exports.py  test_named_ranges.py  test_parser.py  test_validation_calc_settings.py  test_validation_calcchain.py
tests/core/: __init__.py  test_addressing.py  test_cell_type_env.py  test_constraints_mapping.py  test_formula_ast_and_expr_eval.py
tests/data/: cached_values_fixture.xlsx
tests/evaluator/: discover_formula_cells.py  excel_workbook_parity.py  lic_dsf_chart_targets.py  parity_harness.py  test_evaluator.py  test_evaluator_excel_primitives_parity.py  test_functions.py  test_golden_master.py  test_helpers.py  test_ifna_parity.py  test_incremental.py  test_index_parity.py  test_integration_lic_dsf.py  test_lic_dsf_chart_parity.py  test_lic_dsf_chart_targets_unit.py  test_lic_dsf_gdp_bps_chart_parity.py  test_lic_dsf_lo_parity.py  test_lookup_parity.py  test_match_parity.py  test_missing_cell_parity.py  test_name_utils.py  test_numbervalue_parity.py  test_offset_parity.py  test_parity_circular_references.py  test_parity_harness.py  test_types.py  (+3 more)
(+65 files in other folders)
