[project]
name = "excel-grapher"
version = "0.1.0"
description = "Build and analyze dependency graphs from Excel workbooks"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
authors = [
    { name = "Teal Insights", email = "info@tealinsights.com" },
]
keywords = ["excel", "dependency", "graph", "spreadsheet", "formula", "transpiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Private :: Do Not Upload",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastpyxl",
    "numpy>=1.24",
]

[project.optional-dependencies]
networkx = [
    "networkx>=3.0",
]
viz = [
    "graphviz>=0.20",
]
all = [
    "networkx>=3.0",
    "graphviz>=0.20",
]

[project.urls]
Homepage = "https://github.com/Teal-Insights/excel-grapher"
Repository = "https://github.com/Teal-Insights/excel-grapher"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["excel_grapher"]

[tool.hatch.build.targets.wheel.force-include]
"excel_grapher/grapher/lightweight_viz_template.html" = "excel_grapher/grapher/lightweight_viz_template.html"

[tool.hatch.build.targets.sdist]
include = [
    "excel_grapher/",
    "tests/",
    "README.md",
    "LICENSE",
]

# uv's dependency groups for development (separate from optional-dependencies)
[dependency-groups]
dev = [
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "quarto>=0.1.0",
    "ruff>=0.14.0",
    "ty>=0.0.9",
    "xlsxwriter>=3.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=prepend", "-m", "not slow"]
markers = [
    "slow: opt-in tests that are long-running (deselected by default)",
]

[tool.coverage.run]
source = ["excel_grapher"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.uv.sources]
fastpyxl = { git = "https://github.com/Promptly-Technologies-LLC/fastpyxl" }
